[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Scenes/MenuScene.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Button.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Button_Click.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/Button_Hover.png" type="Texture" id=4]
[ext_resource path="res://src/UI/Theme/default_theme.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Fadein"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.482968 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.00392157, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.5
margin_top = -258.0
margin_right = -250.5
margin_bottom = -225.0
rect_scale = Vector2( 6, 6 )
theme = ExtResource( 5 )
text = "Objective 
LOOP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -16.0
margin_right = 640.0
margin_bottom = 174.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 477.0
margin_right = 802.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -23.5
margin_right = -21.0
margin_bottom = -8.5
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 5 )
text = "PLAY"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 1280.0
margin_bottom = 190.0
alignment = 1

[node name="TutorialButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 477.0
margin_right = 802.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/TutorialButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -23.5
margin_right = -50.0
margin_bottom = -8.5
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 5 )
text = "HOW TO PLAY"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fadein" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fadein"]
anims/Fadein = SubResource( 1 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="animation_finished" from="Fadein/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
